
version 8.8 (2020-02-23)
    * Adds new X509CertUtils.store method for storing private key / X.509
      certificates pairs in a Java KeyStore.
    * Updates X509CertChainUtils.store to return the UUID aliases for the
      stored certificate entries.
    * Adds new short-hand IOUtils.readInputStreamToString and readFileToString
      methods using UTF-8 encoding.

version 8.9 (2020-03-03)
    * Updates DefaultJWEDecrypterFactory to support opaque keys, e.g. keys
      stored in a HSM or remote keystore (iss #350).

version 8.10 (2020-03-11)
    * Extends JWKSetCache interface with requiresRefresh method to indicate
      the cached JWK set is about to expire and should be updated. Intended to
      allow for transient retrieval exceptions (iss #348).

version 8.11 (2020-03-27)
    * Adds new DateUtils.isWithin method for checking if a date is within the
      specified reference, give or take an accepted clock skew.

version 8.12 (2020-04-05)
    * Adds new JWSSignerFactory factory for creating a JWS signer from a given
      JWK, with a DefaultJWSSignerFactory implementation supporting HMAC, RSA,
      EC and EdDSA signatures.

version 8.13 (2020-04-06)
    * Adds new JWKSet.isPresent(JWK) method which returns true if the specified
      JWK is present in the JWK set as public or private JWK, by comparing its
      thumbprint with those of the keys in the set.

version 8.14 (2020-04-06)
    * Renames JWKSet.isPresent to JWKSet.containsJWK.

version 8.14.1 (2020-04-09)
    * Fixes parsing of JWK key_ops from JWK.toJSONObject() output (iss #355).

version 8.15 (2020-04-17)
    * Implements JSON Web Signature (JWS) Unencoded Payload Option (RFC 7797).
      Adds new JWSHeader.Builder.base64URLEncodePayload and
      JWSHeader.isBase64URLEncodePayload methods for the boolean "b64"
      parameter. Adds new static JWSObject.parse(String,Payload) method for
      parsing JWS objects with a detached and optionally unencoded payload.